3/3.07/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-backend-db
  template:
    metadata:
      labels:
        app: todos-backend-db
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: postgresql-pv
      containers:
        - name: todo-backend-db
          image: jylhakos/todo-backend-db:3.0.7
          volumeMounts:
          - name: data-volume
            mountPath: /var/lib/postgresql/data
            subPath: postgres
