3/3.07/manifests/postgresql.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: postgresql-ss
spec:
  serviceName: postgresql-svc
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
          - containerPort: 5432
            name: postgresql-port
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgresql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
