3/3.07/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
spec:
  #type: ClusterIP
  #type: LoadBalancer
  type: NodePort
  selector:
    app: todos-backend-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3002
