3/3.07/manifests/service-finder.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-finder-svc
spec:
  type: NodePort
  selector:
    app: todos-frontend-db
  ports:
    - name: http
      #nodePort: 30080
      protocol: TCP
      #port: 1234
      port: 80
      targetPort: 3001
